<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:theme="@style/Theme.Highlighter"
  tools:context=".activities.SettingsActivity">

  <!-- Menu -->
  <ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:contentDescription="@string/desc_logo"
    android:src="@drawable/ic_logo" />
  <info.androidhive.fontawesome.FontTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginRight="20dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:text="@string/fa_chevron_left_solid"
    android:textColor="?attr/colorPrimary"
    android:textSize="20sp"
    app:solid_icon="true"
    android:onClick="goBack"
    tools:ignore="RelativeOverlap" />

  <!-- Title -->
  <TextView
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginTop="100dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:textColor="?attr/colorPrimary"
    android:text="@string/title_settings"
    android:textSize="24sp" />

  <!-- Content -->
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp"
    android:orientation="vertical">

    <TextView
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="25dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textColor="?attr/colorPrimary"
      android:text="@string/title_settings_api_key"
      android:textSize="18sp" />
    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:boxBackgroundColor="@android:color/transparent"
      app:passwordToggleEnabled="true">
      <EditText
        android:id="@+id/et_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="0dp"
        android:background="?attr/colorSurface"
        android:textColor="?attr/colorOnSurface"
        android:autofillHints="hint_property_api_key"
        android:textSize="14sp"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="25dp"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textColor="?attr/colorPrimary"
      android:text="@string/title_settings_collection_url"
      android:textSize="18sp" />
    <EditText
      android:id="@+id/et_collection_url"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textColor="?attr/colorPrimary"
      android:textSize="14sp"
      android:autofillHints="@string/hint_settings_collection_url"
      android:hint="@string/hint_settings_collection_url"
      android:inputType="textUri" />

    <TextView
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="25dp"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textColor="?attr/colorPrimary"
      android:text="@string/title_settings_proxy_url"
      android:textSize="18sp" />
    <EditText
      android:id="@+id/et_proxy_server_url"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textColor="?attr/colorPrimary"
      android:textSize="14sp"
      android:autofillHints="@string/hint_settings_proxy_url"
      android:hint="@string/hint_settings_proxy_url"
      android:inputType="textUri" />

    <TextView
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="25dp"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textColor="?attr/colorPrimary"
      android:text="@string/title_settings_sync"
      android:textSize="18sp" />
    <SeekBar
      android:id="@+id/sb_sync_interval"
      style="@style/Widget.AppCompat.SeekBar.Discrete"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:thumbTint="?attr/colorPrimary"
      android:textColor="?attr/colorPrimary"
      android:max="2"
      android:progress="0"
      tools:ignore="UnusedAttribute" />
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimary"
        android:text="@string/label_hourly" />
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="?attr/colorPrimary"
        android:text="@string/label_daily" />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="?attr/colorPrimary"
        android:text="@string/label_monthly"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <Button
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textColor="?attr/colorPrimary"
      android:text="@string/action_save"
      android:onClick="saveSettings"
      tools:ignore="RelativeOverlap" />
    <Button
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textColor="?attr/colorPrimary"
      android:text="@string/action_notion_download"
      android:onClick="downloadFromNotion"
      tools:ignore="RelativeOverlap" />
    <Button
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:textColor="?attr/colorPrimary"
      android:text="@string/action_notion_upload"
      android:onClick="uploadToNotion"
      tools:ignore="RelativeOverlap" />
  </LinearLayout>

</RelativeLayout>