<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:theme="@style/Theme.Highlighter"
  tools:context=".QuoteViewActivity">

  <!-- Logo -->
  <ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:contentDescription="@string/desc_logo"
    android:src="@drawable/ic_logo" />

  <!-- Back button -->
  <info.androidhive.fontawesome.FontTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginRight="20dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:onClick="goBack"
    android:text="@string/fa_chevron_left_solid"
    android:textColor="?attr/colorPrimary"
    android:textSize="20sp"
    app:solid_icon="true"
    tools:ignore="RelativeOverlap" />

  <!-- Title -->
  <TextView
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:text="@string/title_quote_details"
    android:textSize="24sp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp"
    android:orientation="vertical">

    <!-- Source Title -->
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/title_quote_source_name"
        android:textSize="18sp" />
      <info.androidhive.fontawesome.FontTextView
        android:id="@+id/btn_quote_view_edit_source_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/fa_pen_solid"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:solid_icon="true"
        android:onClick="editStringProperty"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <TextView
      android:id="@+id/tv_quote_view_source_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:justificationMode="inter_word"
      android:text="@string/msg_lorem_medium"
      tools:targetApi="o" />

    <!-- Source URL -->
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp">
      <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/title_quote_source_url"
        android:textSize="18sp" />
      <info.androidhive.fontawesome.FontTextView
        android:id="@+id/btn_quote_view_edit_source_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/fa_pen_solid"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:solid_icon="true"
        android:onClick="editStringProperty"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <TextView
      android:id="@+id/tv_quote_view_source_url"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:text="@string/msg_lorem_medium" />

    <!-- Quote content -->
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp">
      <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/title_quote_content"
        android:textSize="18sp" />
      <info.androidhive.fontawesome.FontTextView
        android:id="@+id/btn_quote_view_edit_quote_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/fa_pen_solid"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:solid_icon="true"
        android:onClick="editStringProperty"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <TextView
      android:id="@+id/btn_quote_view_edit_content"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:justificationMode="inter_word"
      android:text="@string/msg_lorem_long"
      tools:ignore="UnusedAttribute" />

    <!-- Creation date -->
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp">
      <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/title_quote_date"
        android:textSize="18sp" />
      <info.androidhive.fontawesome.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/fa_pen_solid"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:solid_icon="true"
        android:onClick="editDateProperty"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <TextView
      android:id="@+id/tv_quote_view_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:text="@string/msg_lorem_medium" />

    <!-- Labels -->
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp">
      <TextView
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/title_quote_labels"
        android:textSize="18sp" />
      <info.androidhive.fontawesome.FontTextView
        android:id="@+id/btn_quote_view_edit_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/fa_pen_solid"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:solid_icon="true"
        android:onClick="editStringProperty"
        tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <TextView
      android:id="@+id/tv_quote_view_labels_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:text="@string/msg_lorem_medium" />

  </LinearLayout>

</RelativeLayout>